force-app/main/default/objects/PSA_UserStory__c/PSA_UserStory__c.object-meta.xml
<CustomObject>
    <label>PSA UserStory</label>
    <nameField>
        <label>PSA UserStory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PSA User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>