force-app/main/default/objects/PSA_UserStory__c/fields/PSA_BoardId__c.field-meta.xml
<CustomField>
    <fullName>PSA_BoardId__c</fullName>
    <label>PSA Board</label>
    <referenceTo>PSA_Board__c</referenceTo>
    <relationshipLabel>PSA User Stories</relationshipLabel>
    <relationshipName>PSA_User_Stories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>