force-app/main/default/objects/PSA_UserStory__c/fields/PSA_Description__c.field-meta.xml
<CustomField>
    <fullName>PSA_Description__c</fullName>
    <label>PSA_Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>