force-app/main/default/objects/PSA_UserStory__c/fields/PSA_Summary__c.field-meta.xml
<CustomField>
    <fullName>PSA_Summary__c</fullName>
    <label>PSA_Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>