force-app/main/default/objects/PSA_UserStory__c/fields/PSA_UserStoryId__c.field-meta.xml
<CustomField>
    <fullName>PSA_UserStoryId__c</fullName>
    <externalId>true</externalId>
    <label>PSA UserStoryId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>