force-app/main/default/objects/PSA_UserStory__c/listViews/All_User_Stories.listView-meta.xml
<ListView>
    <fullName>All_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>PSA_Summary__c</columns>
    <columns>PSA_UserStoryId__c</columns>
    <columns>PSA_BoardId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All User Stories</label>
</ListView>